[package]
name = "nsd"
version = "0.1.0"
authors = ["Noah Cashin <omn1present@tutanota.com>"]
edition = "2018"
license = "BSD-4-Clause"
repository = "https://github.com/ergpopler/nsd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#panic  = "abort"

#[profile.release]
#lto = true
[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33